--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Created by .ignore support plugin (hsz.mobi)
-node_modules/
+/node_modules
+/npm-debug.log
+/tmp
 .idea/
-jsql-gulp-plugin.iml
+jsql-grunt-plugin.iml
